[gd_scene load_steps=2 format=2]

[ext_resource path="res://ai/goal/PursuitTarget.gd" type="Script" id=1]

[node name="PursuitTarget" type="Node2D"]

script = ExtResource( 1 )

[node name="RelocatingTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[connection signal="timeout" from="RelocatingTimer" to="." method="_relocate_target"]


